annulation des changements pour safari

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <!-- photos du cabinet en enfilade -->
     <section class="reveal mb-5 row rounded p-5 mx-auto shadow">
       <h3 class="text-center hidden">Photos du cabinet</h3>
-      <img src="./img/cab1.jpg" class="col-xxl-4 my-4 safari10" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab1.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
       <img src="./img/cab2.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
       <img src="./img/cab3.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
     </section>
