--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
       <article class="col-lg-6 mt-5">
         
         <h4>Adresse et Google Map</h4>
-        <p>Rue: 32, rue Etienne Marcel</p>
-        <p>Ville: PARIS, 75002</p>
-        <p>Email: anna.ciufici@live.fr</p>
-        <p>Téléphone: 07.87.63.27.83</p>
-        <p>RER A, B et D - arrêt Chatelet Les Halles</p>
+        <p>32, rue Etienne Marcel</p>
+        <p>PARIS, 75002</p>
+        <p>anna.ciufici@live.fr</p>
+        <p>07.87.63.27.83</p>
+        <p>RER A, B et D - arrêt Châtelet Les Halles</p>
         <p>METRO 1, 4, 7, 11 et 14 - arrêt Chatelet Les Halles</p>
         <p>BUS RATP 21, 38, 47, 58, 67, 69, 70, 72, 74, 75, 76, 85, 96</p>
         <p>Station Velib à proximité</p>
@@ -329,7 +329,7 @@
 
   <footer class="footer-bg container-fluid text-center py-2 mt-auto">
     <p>© 2022 Anna-Rita Ciufici</p>
-    <p>Design et developpement par <a href="" class="fontColor1">Marc Aubriot</a></p>
+    <p>Design et développement par <a href="" class="fontColor1">Marc Aubriot</a></p>
   </footer>
 
 
