--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
       <h1 class="text-center display-5 mt-5">Anna-Rita Ciufici, <i>psychologue, psychothérapeute </i></h1>
       <div class="py-5 ">
         <img 
-          src="./img/photo.png" 
+          src="./img/photo2.jpg" 
           title="Photo d'Anna-Rita, psychologue, psychothérapeute" 
           alt="Photo d'Anna-Rita" 
-          class="img-fluid mb-5 rounded-circle mx-auto d-block"
+          class="img-fluid mb-5 mx-auto d-block"
         >
 
         
@@ -155,8 +155,8 @@
     <section class="reveal mb-5 row rounded p-5 mx-auto shadow bgColor3">
       <h3 class="text-center hidden">Photos du cabinet</h3>
       <img src="./img/cab1.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
-      <img src="./img/cab2.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
-      <img src="./img/cab3.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab22.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab33.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
     </section>
 
     <!-- WORK -->
