--- a/index.html
+++ b/index.html
@@ -47,53 +47,61 @@
   <header class="header-bg container-fluid shadow">
     
       <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg py-0 me-5 h-100" style="min-height: 120px;">
-        <a 
-          href="#" 
-          class="navbar-brand ms-5 my-5 fontColor1 fontSize3" 
-          title="Logo" 
-        >C<img 
-          src="./img/psy2.svg" 
-          class="logoImg fillColor2"
-          title="Psy est une lettre grecque utilisée comme emblême dans le domaine de la psychologie" 
-          alt="Le symbole de la psychologie"
-        >fici</a>
+      <div class="row justify-content-between">
+        <nav class="navbar navbar-expand-xl py-0 h-100" style="min-height: 120px;">
+          <div class="col-12 col-xl-4 mt-4">
+            <a 
+              href="#" 
+              class="navbar-brand ms-5 my-5 fontColor1 fontSize2p5" 
+              title="Logo" 
+            >Anna-Rita C<img 
+              src="./img/psy2.svg" 
+              class="logoImg fillColor2"
+              title="Psy est une lettre grecque utilisée comme emblême dans le domaine de la psychologie" 
+              alt="Le symbole de la psychologie"
+            >fici</a> 
+            <p class="ms-5"><i>psychologue, psychothérapeute </i></p>
+          </div>  
 
-        <!-- Hamburger menu for small devices -->
-        <button 
-          class="navbar-toggler my-5"
-          type="button"
-          id="hamburgerBtn"
-          data-bs-toggle="collapse"
-          data-bs-target="#navmenu"
-          >
-          <span class="navbar-toggler-icon p-4"></span>
-        </button>
 
-        <!-- Navbar -->
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto fontSize1p5">
+          <div class="col-12 col-xl-8">
+            <!-- Hamburger menu for small devices -->
+            <button
+              class="navbar-toggler my-5 me-3 hamburgerBtn"
+              type="button"
+              id="hamburgerBtn"
+              data-bs-toggle="collapse"
+              data-bs-target="#navmenu"
+              >
+              <span class="navbar-toggler-icon p-4"></span>
+            </button>
 
-            <li class="nav-item">
-              <a href="#about" class="nav-link fontColor1" title="A propos de moi">A propos</a>
-            </li>
+            <!-- Navbar -->
+            <div class="collapse navbar-collapse" id="navmenu">
+              <ul class="navbar-nav ms-auto fontSize1p5">
 
-            <li class="nav-item">
-              <a href="#work" class="nav-link fontColor1" title="Mes spécialités">Spécialités</a>
-            </li>
+                <li class="nav-item">
+                  <a href="#about" class="nav-link fontColor1" title="A propos de moi">A propos</a>
+                </li>
 
-            <li class="nav-item">
-              <a href="#blog" class="nav-link fontColor1" title="Mon blog">Blog</a>
-            </li>
+                <li class="nav-item">
+                  <a href="#work" class="nav-link fontColor1" title="Mes spécialités">Spécialités</a>
+                </li>
 
-            <li class="nav-item">
-              <a href="#access" class="nav-link fontColor1" title="Le plan d'accès au cabinet">Accès</a>
-            </li>
+                <li class="nav-item">
+                  <a href="#blog" class="nav-link fontColor1" title="Mon blog">Blog</a>
+                </li>
 
-            <li class="nav-item">
-              <a href="#contact" class="nav-link fontColor1" title="Formulaire de contact">Me contacter</a>
-            </li>
-          </ul>
+                <li class="nav-item">
+                  <a href="#access" class="nav-link fontColor1" title="Le plan d'accès au cabinet">Accès</a>
+                </li>
+
+                <li class="nav-item">
+                  <a href="#contact" class="nav-link fontColor1" title="Formulaire de contact">Me contacter</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </nav>
   </header>
@@ -130,7 +138,7 @@
 
     <!-- A PROPOS -->
     <section id="about" class="reveal my-5 row p-md-5 rounded mx-auto shadow" >
-      <h1 class="text-center display-5 mt-5">Anna-Rita Ciufici, <i>psychologue, psychothérapeute </i></h1>
+      <h1 class="text-center display-5 mt-5 hidden">Anna-Rita Ciufici, <i>psychologue, psychothérapeute </i></h1>
       <div class="py-5 ">
         <img 
           src="./img/photo2.jpg" 
@@ -154,7 +162,7 @@
     <!-- photos du cabinet en enfilade -->
     <section class="reveal mb-5 row rounded p-5 mx-auto shadow bgColor3">
       <h3 class="text-center hidden">Photos du cabinet</h3>
-      <img src="./img/cab1.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab11.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
       <img src="./img/cab22.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
       <img src="./img/cab33.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
     </section>
