--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./img/psy.svg" type="image/x-icon">
   <link rel=“canonical” href=“https://anna-rita-ciufici.com/”>
-  <title>Cabinet d'Anna-Rita Ciufici, psychologue, psychothérapeute à Paris</title>
+  <title>Anna-Rita Ciufici, psychologue, psychothérapeute à Paris</title>
 
   <!-- Styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="./styles/styles.css"> 
 
   <!-- SEO -->
-  <meta name="description" content="Cabinet de psychologie et psychothérapie sur Paris Centre, Chatelet les Halles, vous accueille sur rendez-vous par email ou téléphone. Spécialités EMDR, souffrance au travail, thérapie analytique... venez découvrir l'expertise d'Anna-Rita-Ciufici. ">
-  <meta name="title" content="Cabinet d'Anna-Rita Ciufici, psychologue, psychothérapeute à Paris">
+  <meta name="description" content="Cabinet de psychologie et psychothérapie sur Paris Centre, Chatelet les Halles, vous accueille sur rendez-vous par email ou téléphone.">
+  <meta name="title" content="Anna-Rita Ciufici, psychologue, psychothérapeute à Paris">
   <meta name="keywords" content="Psychologue, psychologue clinicienne, souffrance au travail, paris centre, psychothérapeute, souffrance personnelle, patients adultes, rebondissement professionnel">
   <meta name="robots" content="index,noimageindex">
   <meta name="author" content="Anna-Rita Ciufici">
