--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
               href="#" 
               class="navbar-brand ms-5 my-5 fontColor1 fontSize2p5" 
               title="Logo" 
-            >Anna-Rita C<img 
+            ><img 
               src="./img/psy2.svg" 
               class="logoImg fillColor2"
               title="Psy est une lettre grecque utilisée comme emblême dans le domaine de la psychologie" 
               alt="Le symbole de la psychologie"
-            >fici</a> 
+            >Anna-Rita Ciufici</a> 
             <p class="ms-5"><i>psychologue, psychothérapeute </i></p>
           </div>  
 
@@ -110,8 +110,8 @@
     
     <!-- QUOTE Brian Tracy-->
     <blockquote class="reveal my-5 row mx-auto text-center">
-      <h2 class="fst-italic display-5">
-        <span>"</span>
+      <h2 class="fst-italic display-6 fontColor3">
+        <span></span>
         <span>Je</span>
         <span>ne</span>
         <span>suis</span>
@@ -128,7 +128,7 @@
         <span>choisis</span>
         <span>de</span>
         <span>devenir.</span>
-        <span>"</span>
+        <span></span>
         <span></span>
         <span>Carl</span>
         <span>Gustav</span>
@@ -151,7 +151,7 @@
         <!-- <h3 class="text-center"><i>Psychologue, psychothérapeute</i></h3> -->
         <br>
         <p>Psychologue clinicienne diplômée de l’école de Psychoprat, je suis psychothérapeute en cabinet libéral au 32 rue Etienne-Marcel, Paris 2eme. </p>
-        <p>Formée aux thérapies analytiques à l’A.P.E.P, j’ai aussi une spécialité en psychopathologie du travail délivrée par le CNAM sous la direction de Marie Pezé et Christophe Dejours.  J’ai complété ce cursus par un enseignement à l’Institut Français d’EMDR. </p>
+        <p>Formée aux thérapies analytiques à l’A.P.E.P, j’ai aussi une spécialité en psychopathologie du travail délivrée par le CNAM sous la direction de Marie Pezé et Christophe Dejours.  J’ai complété ce cursus par une formation d’EMDR à l'institut Français d'EMDR. </p>
         <p>J’ai, par ailleurs, une bonne connaissance du monde du travail et ses problématiques actuelles, comme le témoigne le sujet de mon mémoire: « la stratégie d’adaptation en période de crise professionnelle ». A cela s’associe une expérience de l’entreprise vue de l’intérieur, puisque que j’ai un parcours de plus de  vingt ans en tant que journaliste salariée. </p>
         <p>Cette expérience professionnelle et ces différentes formations, conjuguées à une qualité d’écoute particulièrement sensible m’offrent la possibilité de m’adapter au plus près de mes patients. Je reçois des adultes en demande d’aide, qu’ils soient en quête de sens, en mal-être ou confrontée à la souffrance tant personnelle que professionnelle. </p>
       </div>
@@ -169,7 +169,8 @@
 
     <!-- WORK -->
     <section id="work" class="reveal row rounded p-md-5 mb-5 mx-auto shadow ">
-      <h3 class="text-center mt-5 h-5vh">Mes spécialités</h3>
+      <h3 class="text-center mt-5 h-5vh display-5">Mes spécialités</h3>
+      <p class="text-center">Souffrance au travail, Thérapies Analytique, EMDR</p>
       
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 
