--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                   <a href="#work" class="nav-link fontColor1" title="Mes spécialités">Spécialités</a>
                 </li>
 
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a href="#blog" class="nav-link fontColor1" title="Mon blog">Blog</a>
-                </li>
+                </li> -->
 
                 <li class="nav-item">
                   <a href="#access" class="nav-link fontColor1" title="Le plan d'accès au cabinet">Accès</a>
