carousel class change (opti seo)

--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
                   src="./img/5.svg" 
                   title="La souffrance au travail est une crise profonde"
                   alt="Un masque malheureux parmis des masques heureux, représente la souffrance d'une personne" 
-                  class="img-fluid w-50 rounded mb-5 mt-5 mx-auto d-block" 
-                  style="min-width: 400px;"
+                  class="img-fluid w-50 rounded mb-5 mt-5 mx-auto d-block slidet1"
                 >
                 <h3 class="text-center mb-3">Souffrance au travail</h3>
                 <p>Certaines situations professionnelles confrontent la personne à une crise profonde face à laquelle elle se sent démunie. Du simple mal-être au burn-out, tout un éventail de perturbations peut survenir et déstabiliser l’individu.</p>
@@ -215,8 +214,7 @@
                   src="./img/9.svg" 
                   title="La thérapie analytique accompagne les personnes" 
                   alt="Le penseur, et ses pensées." 
-                  class="img-fluid w-50 rounded mb-5 mt-5 mx-auto d-block" 
-                  style="min-width: 400px;"
+                  class="img-fluid w-50 rounded mb-5 mt-5 mx-auto d-block slidet1" 
                 >
                 <h3 class="text-center mb-3">Théraphies analytique</h3>
                 <p>La thérapie analytique permet d’accompagner et de soutenir les personnes dans leur souffrance psychologique, dans leur volonté de faire face aux difficultés ou, simplement, dans leur envie de s’épanouir et de mieux vivre leur vie. En effet, certaines situations ou périodes de la vie viennent frapper la personne dans ses failles. Elle se sent débordée, dépassée. C’est l’occasion de faire un retour sur soi, de comprendre ce qui a engendré ces états pour repartir sur d’autres bases. Ces situations déstabilisantes peuvent apparaître dans tous les domaines de la vie, professionnel, personnel, sociale, amoureuse.</p> 
@@ -236,8 +234,7 @@
                   src="./img/1.svg" 
                   title="L'EMDR est une technique de psychologie" 
                   alt="Une représentation de l'EMDR: la tête d'un homme et ses pensées" 
-                  class="img-fluid w-50 rounded mb-5 mt-5 mx-auto d-block" 
-                  style="min-width: 300px;"
+                  class="img-fluid w-50 rounded mb-5 mt-5 mx-auto d-block slidet2" 
                 >
                 <h3 class="text-center mb-3">EMDR</h3>
                 <p>La particularité de La technique EMDR réside dans la stimulation sensorielle par le biais de mouvements oculaires ou de  tapotements  sur des zones névralgiques. Reconnue comme efficace pour le traitement des syndromes post- traumatiques par l'INSERM depuis 2002, elle est également appliquée aujourd’hui à des situations de vie difficile (divorce, deuil, anxiété …)</p>
