--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <h3 class="text-center display-5 mt-5 hidden">Anna-Rita Ciufici, <i>psychologue, psychothérapeute </i></h3>
       <div class="py-5 ">
         <img 
-          src="./img/photo2.jpg" 
+          src="./img/photo2-min.jpg" 
           title="Photo d'Anna-Rita, psychologue, psychothérapeute" 
           alt="Photo d'Anna-Rita" 
           class="img-fluid mb-5 mx-auto d-block"
@@ -169,9 +169,9 @@
     <!-- photos du cabinet en enfilade -->
     <section class="reveal mb-5 row rounded p-5 mx-auto shadow bgColor3">
       <h3 class="text-center hidden">Photos du cabinet</h3>
-      <img src="./img/cab11.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
-      <img src="./img/cab22.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
-      <img src="./img/cab33.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab11-min.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab22-min.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
+      <img src="./img/cab33-min.jpg" class="col-xxl-4 my-4" title="Photo du cabinet" alt="Photo du cabinet">
     </section>
 
     <!-- WORK -->
