--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body class="d-flex flex-column ">
+<body class="d-flex flex-column">
 
   <!-- HEADER -->
   <header class="header-bg container-fluid shadow">
@@ -281,7 +281,7 @@
         </div>
         
         <div class="blocAccess2">
-          <p>RER A, B et D - arrêt Châtelet Les Halles</p>
+          <p>RER A, B et D - Châtelet Les Halles</p>
           <p>METRO 1, 4, 7, 11 et 14 - Les Halles, Sentier, Etienne-Marcel</p>
           <p>BUS 29, 38, 74, 85</p>
           <p>Station Velib à proximité</p>
